# whatif

./: .gitignore  pom.xml
examples/: test.sh
examples/alien/: pom.xml
examples/alien/src/: CMakeLists.txt  main.cpp
examples/log4cpp/: pom.xml
examples/log4cpp/src/: CMakeLists.txt  log.cpp  log.h  log4cppConfig.cmake.in
examples/messages/: pom.xml
examples/messages/src/: CMakeLists.txt  important_message.cpp  important_message.h  messagesConfig.cmake.in
